// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KibanaSolutionAvatar renders 1`] = `
<EuiAvatar
  color="plain"
  css={
    Array [
      Object {
        "map": undefined,
        "name": "ym1nj7",
        "next": undefined,
        "styles": "
box-shadow:
  0 .7px 1.4px rgba(0,0,0,0.07),
  0 1.9px 4px rgba(0,0,0,0.05),
  0 4.5px 10px rgba(0,0,0,0.05);
",
        "toString": [Function],
      },
      false,
    ]
  }
  iconType="logoElastic"
  name="Solution"
/>
`;

exports[`KibanaSolutionAvatar renders 2`] = `
<EuiAvatar
  color="plain"
  css={
    Array [
      Object {
        "map": undefined,
        "name": "ym1nj7",
        "next": undefined,
        "styles": "
box-shadow:
  0 .7px 1.4px rgba(0,0,0,0.07),
  0 1.9px 4px rgba(0,0,0,0.05),
  0 4.5px 10px rgba(0,0,0,0.05);
",
        "toString": [Function],
      },
      false,
    ]
  }
  iconType="logoElasticStack"
  name="Elastic Stack"
/>
`;
